Use jrxb bevy version

--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -16,12 +16,12 @@ default = []
 3d = []
 
 [dependencies]
-bevy = { version = "0.5.0", default-features = false }
+bevy = { git="https://github.com/jrxb/bevy.git", default-features = false }
 duplicate = "0.3.0"
 
 [dev-dependencies]
 rstest = "0.7"
-bevy = { version = "0.5.0", default-features = false, features = ["render"] }
+bevy = { git="https://github.com/jrxb/bevy.git", default-features = false, features = ["render"] }
 
 [build-dependencies]
 cfg_aliases = "0.1.1"
