--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,12 +28,12 @@ heron_core = { version = "0.12.1", path = "core" }
 heron_macros = { version = "0.12.1", path = "macros" }
 heron_rapier = { version = "0.12.1", path = "rapier" }
 heron_debug = { version = "0.12.1", path = "debug", optional = true }
-bevy = { version = "0.5.0", default-features = false }
+bevy = { git="https://github.com/jrxb/bevy.git", default-features = false }
 
 [dev-dependencies]
-bevy = "0.5.0"
-skeptic = "0.13.6"
-rstest = "0.7.0"
+bevy = { git="https://github.com/jrxb/bevy.git", default-features = false, features=["render", "bevy_wgpu", "x11"] }
+skeptic = "0.13"
+rstest = "0.7"
 
 [build-dependencies]
 cfg_aliases = "0.1.1"
